--- a/Journal/app/states/main/views/document.html
+++ b/Journal/app/states/main/views/document.html
@@ -1,11 +1,13 @@
 <div class="layout-root" layout="column">
-    <div class="md-toolbar" layout="row">
-        <md-button class="md-button md-button-icon" ng-click="t.navigateBack()">
-            <i class="zmdi zmdi-chevron-left"></i>
+    <div class="md-toolbar" layout="row" layout-align="start center">
+        <md-button class="md-button-icon" ng-click="t.navigateBack()">
+            <md-icon md-font-icon="zmdi zmdi-chevron-left"></md-icon>
         </md-button>
+
         <div class="title" flex>
-            {{t.file.label}}
+            <span>{{t.file.label}}</span>
         </div>
+
         <md-button class="md-button" ng-click="t.publishLatestRevision(t.file)">
             <i class="zmdi zmdi-share"></i><span class="btn-label" translate>Share</span>
         </md-button>
