--- a/Journal/app/states/main/views/dashboard.html
+++ b/Journal/app/states/main/views/dashboard.html
@@ -18,7 +18,7 @@
         </md-button>
 
         <md-button class="md-button-icon">
-            <md-icon md-font-icon="zmdi zmdi-more-vert"></md-icon>
+            <md-icon md-font-icon="zmdi zmdi-more"></md-icon>
             <md-tooltip translate>More Options</md-tooltip>
         </md-button>
     </div>
@@ -42,7 +42,37 @@
             <div class="scroll-container scroll-y">
                 <md-list>
                     <md-list-item ng-repeat="project in t.projects" ng-click="t.openProject(project)">
-                        {{project.Title}}
+                        <span flex>{{project.Title}}</span>
+
+                        <md-menu>
+                            <md-button class="md-button-icon" ng-click="t.openMenu($event, $mdMenu)">
+                                <md-icon md-font-icon="zmdi zmdi-more-vert"></md-icon>
+                            </md-button>
+                            <md-menu-content width="4">
+                                <md-menu-item>
+                                    <md-button ng-click="t.openProject(project)">
+                                        <md-icon></md-icon>
+                                        <span translate>Open</span>
+                                    </md-button>
+                                </md-menu-item>
+                                <md-menu-item>
+                                    <md-button ng-click="t.addFileToProject(project)">
+                                        <md-icon md-font-icon="zmdi zmdi-plus"></md-icon>
+                                        <span translate>Add File</span>
+                                    </md-button>
+                                </md-menu-item>
+                                <md-menu-item>
+                                    <md-divider></md-divider>
+                                </md-menu-item>
+                                <md-menu-item>
+                                    <md-button ng-click="t.deleteProject($event, project)">
+                                        <md-icon md-font-icon="zmdi zmdi-delete"></md-icon>
+                                        <span translate>Delete</span>
+                                    </md-button>
+                                </md-menu-item>
+                            </md-menu-content>
+                        </md-menu>
+
                         <md-divider></md-divider>
                     </md-list-item>
                 </md-list>
@@ -60,3 +90,20 @@
         </md-tab>
     </md-tabs>
 </div>
+
+<script type="text/ng-template" id="delete-project-dialog.html">
+    <md-dialog aria-label="Project Dialog" ng-cloak>
+        <md-dialog-content>
+            <md-content class="padding-x-xl padding-y-xl">
+                <h3>Delete '{{project.Title}}'?</h3>
+                <p translate>The project will be archived and no content will be deleted. You can restore the project at any time in the
+                    future.
+                </p>
+            </md-content>
+        </md-dialog-content>
+        <md-dialog-actions layout="row" layout-align="end center">
+            <md-button ng-click="ok()" class="md-warn">Delete</md-button>
+            <md-button ng-click="cancel()" translate>Cancel</md-button>
+        </md-dialog-actions>
+    </md-dialog>
+</script>
