Bugfix: Fixed new agentService interface in chat, topic and task control Bugfix: Moved setup of external link handlers into windowService so that they are set up after a reload. Bugfix: Fixed layout issues in app settings pane. Bugfix: Fixed format of file card heading. Removed deprecated user menu.

--- a/Journal/app/style.scss
+++ b/Journal/app/style.scss
@@ -23,7 +23,7 @@ $selectionTextColor: $textColor;
 $selectionBorderColor: transparent;
 $selectionBackgroundColor: rgba($textColor, .1);
 $windowBackgroundColor: #e6e6e6;
-$headerBackgroundColor: #393939;
+$headerBackgroundColor: #2f2f2f;
 $headerTextColor: #ededed;
 $headerHeight: 40px;
 $toolbarHeight: 42px;
