Reduced base font size.

--- a/Journal/app/states/main/views/dashboard.html
+++ b/Journal/app/states/main/views/dashboard.html
@@ -27,7 +27,7 @@
         <art-avatar src="t.userPhotoUrl" width="90" height="90" can-change="false"></art-avatar>
 
         <div class="md-padding md-2-line" flex>
-            <h2>{{t.user.Name}}</h2>
+            <h3 class="md-headline">{{t.user.Name}}</h3>
             <p>{{t.user.EmailAddress}}</p>
         </div>
 
