--- a/Journal/app/states/main/views/dashboard.html
+++ b/Journal/app/states/main/views/dashboard.html
@@ -9,21 +9,10 @@
             </md-not-found>
         </md-autocomplete>
 
-        <div class="title" flex>
-        </div>
-
-        <md-button class="md-button-icon" ui-sref="main.view.settings.profile">
-            <md-icon md-font-icon="zmdi zmdi-settings"></md-icon>
-            <md-tooltip translate>Settings</md-tooltip>
-        </md-button>
-
-        <md-button class="md-button-icon">
-            <md-icon md-font-icon="zmdi zmdi-more"></md-icon>
-            <md-tooltip translate>More Options</md-tooltip>
-        </md-button>
+        <div class="title" flex></div>
     </div>
 
-    <div class="md-padding" layout="row" layout-align="start center">
+    <div class="padding-x-xl" layout="row" layout-align="start center">
         <art-avatar src="t.userPhotoUrl" width="90" height="90" can-change="false"></art-avatar>
 
         <div class="md-padding md-2-line" flex>
@@ -31,64 +20,59 @@
             <p>{{t.user.EmailAddress}}</p>
         </div>
 
-        <md-button class="md-button-icon" ng-disabled="!t.user.Username" ng-href="https://artivity.online/{{t.user.Username}}">
-            <md-icon md-font-icon="zmdi zmdi-globe"></md-icon>
-            <md-tooltip translate>Go Online</md-tooltip>
+        <md-button class="md-button-icon" ui-sref="main.view.settings.profile">
+            <md-icon md-font-icon="zmdi zmdi-settings"></md-icon>
+            <md-tooltip translate>Settings</md-tooltip>
         </md-button>
     </div>
 
-    <md-tabs class="md-margin" md-border-bottom md-center-tabs flex>
-        <md-tab label="{{'Projects' | translate}}">
-            <div class="scroll-container scroll-y">
-                <md-list>
-                    <md-list-item ng-repeat="project in t.projects" ng-click="t.openProject(project)">
-                        <span flex>{{project.Title}}</span>
+    <div class="padding-x-xl" layout="row" flex>
+        <div flex="35">
+            <h4 translate>Projects</h4>
 
-                        <md-menu>
-                            <md-button class="md-button-icon" ng-click="t.openMenu($event, $mdMenu)">
-                                <md-icon md-font-icon="zmdi zmdi-more-vert"></md-icon>
-                            </md-button>
-                            <md-menu-content width="4">
-                                <md-menu-item>
-                                    <md-button ng-click="t.openProject(project)">
-                                        <md-icon></md-icon>
-                                        <span translate>Open</span>
-                                    </md-button>
-                                </md-menu-item>
-                                <md-menu-item>
-                                    <md-button ng-click="t.addFileToProject(project)">
-                                        <md-icon md-font-icon="zmdi zmdi-plus"></md-icon>
-                                        <span translate>Add File</span>
-                                    </md-button>
-                                </md-menu-item>
-                                <md-menu-item>
-                                    <md-divider></md-divider>
-                                </md-menu-item>
-                                <md-menu-item>
-                                    <md-button ng-click="t.deleteProject($event, project)">
-                                        <md-icon md-font-icon="zmdi zmdi-delete"></md-icon>
-                                        <span translate>Delete</span>
-                                    </md-button>
-                                </md-menu-item>
-                            </md-menu-content>
-                        </md-menu>
+            <md-list>
+                <md-list-item ng-repeat="project in t.projects" ng-click="t.openProject(project)">
+                    <div flex>{{project.Title}}</div>
 
-                        <md-divider></md-divider>
-                    </md-list-item>
-                </md-list>
-            </div>
-        </md-tab>
-        <md-tab label="{{'Files' | translate}}">
-            <div class="scroll-container scroll-y">
-                <md-list>
-                    <md-list-item ng-repeat="file in t.files" ng-click="null">
-                        {{file.label}}
-                        <md-divider></md-divider>
-                    </md-list-item>
-                </md-list>
-            </div>
-        </md-tab>
-    </md-tabs>
+                    <md-menu>
+                        <md-button class="md-button-icon" ng-click="t.openMenu($event, $mdMenu)" style="position: relative; right: -15px;">
+                            <md-icon md-font-icon="zmdi zmdi-more-vert"></md-icon>
+                        </md-button>
+                        <md-menu-content width="4">
+                            <md-menu-item>
+                                <md-button ng-click="t.openProject(project)">
+                                    <md-icon></md-icon>
+                                    <span translate>Open</span>
+                                </md-button>
+                            </md-menu-item>
+                            <md-menu-item>
+                                <md-button ng-click="t.addFileToProject(project)">
+                                    <md-icon md-font-icon="zmdi zmdi-plus"></md-icon>
+                                    <span translate>Add File</span>
+                                </md-button>
+                            </md-menu-item>
+                            <md-menu-item>
+                                <md-divider></md-divider>
+                            </md-menu-item>
+                            <md-menu-item>
+                                <md-button ng-click="t.deleteProject($event, project)">
+                                    <md-icon md-font-icon="zmdi zmdi-delete"></md-icon>
+                                    <span translate>Delete</span>
+                                </md-button>
+                            </md-menu-item>
+                        </md-menu-content>
+                    </md-menu>
+
+                    <md-divider></md-divider>
+                </md-list-item>
+            </md-list>
+        </div>
+        <div flex="5"></div>
+        <div>
+            <h4 translate>Recently Used</h4>
+            <art-file-card class="pull-left" file="file" ng-repeat="file in t.files" ng-click="t.viewFile($event, file)" style="width: 30%; min-width: 150px; max-width: 250px"></art-file-card>
+        </div>
+    </div>
 </div>
 
 <script type="text/ng-template" id="delete-project-dialog.html">
