--- a/Journal/app/style.scss
+++ b/Journal/app/style.scss
@@ -991,6 +991,10 @@ h4 {
 	overflow: hidden;
 }
 
+.toolbar.toolbar-floating .md-button {
+	margin: 6px 5px;
+}
+
 .toolbar.toolbar-floating .btn {
 	background-color: #f1f1f1;
 	color: $textColor;
