--- a/Journal/app/states/main/views/project.html
+++ b/Journal/app/states/main/views/project.html
@@ -1,7 +1,30 @@
-<div class="layout-root">
-    <art-file-list onload="t.getFiles"></art-file-list>
+<div class="layout-root" layout="column">
+    <md-toolbar layout="row">
+        <div flex></div>
+        <md-button aria-label="Edit Project" ng-click="t.editProject($event)">
+            <md-icon md-font-icon="zmdi zmdi-edit"></md-icon>
+        </md-button>
+        <md-button aria-label="Archive Project" ng-click="t.deleteProject($event)">
+            <md-icon md-font-icon="zmdi zmdi-delete"></md-icon>
+        </md-button>
+    </md-toolbar>
 
-    <md-sidenav class="md-sidenav-right" md-component-id="right" md-whiteframe="4" style="min-width: 450px;">
-        <art-project-settings project="t.project"></art-project-settings>
-    </md-sidenav>
+    <div class="layout-container" flex>
+        <art-file-list onload="t.getFiles"></art-file-list>
+    </div>
 </div>
+
+<script type="text/ng-template" id="delete-project-dialog.html">
+    <md-dialog aria-label="Project Dialog">
+        <md-dialog-content>
+            <md-content class="padding-x-xl padding-y-xl">
+                <h3>Delete '{{project.Title}}'?</h3>
+                <p translate>The project will be archived and no content will be deleted. You can restore the project at any time.</p>
+            </md-content>
+        </md-dialog-content>
+        <md-dialog-actions layout="row" layout-align="end center">
+            <md-button ng-click="ok()" class="md-warn">Delete</md-button>
+            <md-button ng-click="cancel()" translate>Cancel</md-button>
+        </md-dialog-actions>
+    </md-dialog>
+</script>
